objects/Quote.object
<CustomObject>
    <fields>
        <fullName>ASP1__c</fullName>
        <label>ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASP_Formula__c</fullName>
        <formula>IF( System_Size_PV_Formula__c  &gt; 0, (TotalPrice  /  (System_Size_PV_Formula__c * 1000)),
IF(System_Size_BOS_Formula__c &gt; 0,  (TotalPrice /  (System_Size_BOS_Formula__c * 1000 ))  , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASP__c</fullName>
        <formula>TotalPrice /  (1000*System_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ac_Cabinet_Type__c</fullName>
        <label>AC Cabinet Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>IF(Account__r.Business_Registration__c!=null, Account__r.Business_Registration__r.Phone__c ,Account__r.Partner_Account__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_email__c</fullName>
        <formula>Account__r.Partner_Account__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_id__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adder_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>It&apos;s a new to store the adder fee in the deal.Commission won&apos;t be provided on adder cost but System Cost - Dealer Cost.</description>
        <label>Adder Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Equipment__c</fullName>
        <label>Additional Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adhoc_Create_LDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adhoc Create LDA Check box field to send Agreement Document</description>
        <label>Adhoc Create LDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <label>Admin Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amended_Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amended Lease Scenario</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Quote.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Quote.Lease_Doc_Signed__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amended_Lease_number__c</fullName>
        <label>Amended Lease #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Copy_Error_Message__c</fullName>
        <label>Amendment Copy Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_Date__c</fullName>
        <label>Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendment_Doc_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Doc Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_History1__c</fullName>
        <label>Amendment History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_Quote_ID__c</fullName>
        <label>Amendment Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment_Type__c</fullName>
        <label>Amendment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AmmendmentType_AmdQuote__c</fullName>
        <label>Ammendment Type for Amended Quote</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Bill__c</fullName>
        <label>Annual Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Price__c</fullName>
        <label>Annual Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Usage__c</fullName>
        <label>Annual Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_build_rate_mo__c</fullName>
        <label>Anticipated build rate homes / mo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Api_Session_id__c</fullName>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Api Session id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Finance_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Field to show approved loan amount for the loan term selected. Values are pulled from Credit Application. Field created for Sunpower Loan project.</description>
        <label>Approved Finance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_by_Business_Unit_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Business Unit Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Executive_Vice_President__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Executive Vice President</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_Layout_Field_Detailed_3_days__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>90% accuracy

Array Layout derived from Site Audit conducted by Proposal Team</inlineHelpText>
        <label>Array Layout- Field- Detailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_Layout_Revision__c</fullName>
        <label>Array Layout Revision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_Layout_Sales_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>70% accuracy

Requires quality satellite image of site (Sales must validate location)</inlineHelpText>
        <label>Array Layout- Desk- Simple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Array_Layout_Site_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>80% accuracy

Requires 2 of following:
1) Satellite–Quality image of site (Sales must validate)
2) Photos–Images of site &amp; electrical
3) Measurements–Calcs from Sales Audit or Customer
4) Construction Docs–Plans containing sheets mentioned in RFI</inlineHelpText>
        <label>Array Layout- Desk- Detailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Driving_Reduction__c</fullName>
        <label>Auto Driving Reduction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Of_Rate_Per_KWH__c</fullName>
        <formula>Rollup_Rate_Per_KWH__c  / 20</formula>
        <label>Average Of Rate Per KWH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price_per_Watt__c</fullName>
        <label>Average Price per Watt</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Averge_Payback_Rate_Per_kWH__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP
Description: updated by GPP UpdateQuoteDetails API</description>
        <label>Averge Payback Rate (Per kWH)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avoided_Cost_of_Power__c</fullName>
        <description>Commercial:
Field created as part of Helix PPA project
PO: Miltos Vratimos
Projected Release: WW21 - 2017</description>
        <inlineHelpText>$/kWh</inlineHelpText>
        <label>Avoided Cost of Power</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOS_w_Formula__c</fullName>
        <formula>BOS_w__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOS $/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOS_w__c</fullName>
        <label>BOS $/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Binding_Offer_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Binding Offer Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgetary_Pricing_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budgetary Pricing Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>TEXT(Opportunity.Business_Unit__c)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buydown_Amount__c</fullName>
        <label>Buydown Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buydown_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buydown Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO2_Emissions_Reduction__c</fullName>
        <label>CO2 Emissions Reduction</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COGS__c</fullName>
        <label>COGS</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;EmailTemplateId=00X80000001OozU&quot; +
&quot;&amp;TemplateId=a2N80000000PB1A&quot; +
&quot;&amp;EmailToId=0038000001G7aCt&quot;+
&quot;&amp;EmailAdditionalTo=&quot; + Oracle_Vendor_email_field_value__c  +
&quot;&amp;fp0=1&quot; +
&quot;&amp;LG4=1&quot; +
&quot;&amp;QMode=3&quot; +
&quot;&amp;OFN=&quot; &amp; &quot;LDA Letter Lease&quot; &amp; Final_Lease_Number__c +
&quot;&amp;QueryId=a2U80000000TN98&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Amount1__c</fullName>
        <label>Cash Amount1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Amount2__c</fullName>
        <label>Cash Amount2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Amount3__c</fullName>
        <label>Cash Amount3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Description1__c</fullName>
        <label>Cash Description1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Description2__c</fullName>
        <label>Cash Description2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Description3__c</fullName>
        <label>Cash Description3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cents_kWh__c</fullName>
        <defaultValue>00.00</defaultValue>
        <description>Used to enter PPA Cents/kWh</description>
        <label>Cents/kWh</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certified_Third_Party_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Third Party Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Cont_Licence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Cont Licence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <formula>Account__r.BillingCity +   Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Opportunity.City_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Expiration_Date__c</fullName>
        <description>We are using this field in Create Lease Doc Quote formula field</description>
        <formula>Date_Modified__c   + 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Operation_Date__c</fullName>
        <label>Commercial Operation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Doc_Template__c</fullName>
        <description>Case #543300 , requested by Tim Chen.This field is created to capture the Record ID of Conga Doc Template to use when we click View Proposal button on Quote wizard page on Portal.</description>
        <label>Conga Doc Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Solution_URL1__c</fullName>
        <description>This field is used in the Workflow with Outbound message to send this to Conga automatically.</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;ReportId=00O80000004rw2O&quot; +
&quot;&amp;QueryId=a2UL0000000EPQJ&quot; +
&quot;&amp;TemplateId=&quot; + IF(CONTAINS(Account__r.BillingState, &apos;VT&apos;), &quot;a2N80000000PB40&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;MA&apos;), &quot;a2N80000000PB4P&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;NY&apos;), &quot;a2N80000000PB4A&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;CA&apos;), &quot;a2N80000000PB4U&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;PA&apos;), &quot;a2N80000000PB45&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;CO&apos;), &quot;a2N80000000PB4K&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;NJ&apos;), &quot;a2N80000000PB3v&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;AZ&apos;), &quot;a2N80000000PB4Z&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;HI&apos;), &quot;a2N80000000PB4F&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;NV&apos;), &quot;a2NL0000001FJ0p&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;CT&apos;), &quot;a2N34000000XL5J&quot;,
IF(CONTAINS(Account__r.BillingState, &apos;MD&apos;), &quot;a2N34000000XL5E&quot;,&apos;**&apos;) ) ) ) ) ) ) ) ) ) ) ) +
&quot;&amp;fp0=1&quot; +
&quot;&amp;QMode=4&quot; +
&quot;&amp;ESSignaturetype=2&quot; +
&quot;&amp;ESCustomField1=Quote__c&quot; +
&quot;&amp;ESCustomFieldValue1=&quot; + Id +
&quot;&amp;ESCustomField2=Account__c&quot; +
&quot;&amp;ESCustomFieldValue2=&quot; + Related_Account__c +
&quot;&amp;ESCustomField3=Created_By_Partner_Poratl_User__c&quot; +
&quot;&amp;ESCustomFieldValue3=&quot; + $User.FirstName +&quot;+&quot; + $User.LastName +
&quot;&amp;AttachmentParentId=&quot; + Account__r.Id +
&quot;&amp;ESAgreementName=&quot; + Account__r.Partner_Account__r.Name + &quot;+-+&quot; + Account__r.Name &amp; &quot;+-+Lien+Waiver+Doc&quot; +
&quot;&amp;OFN=&quot; + Account__r.Partner_Account__r.Name + &quot;+-+&quot; + Account__r.Name &amp; &quot;+-+Lien+Waiver+Doc&quot; +
&quot;&amp;ESCustomField4=Agreement_Name__c&quot; +
&quot;&amp;ESCustomFieldValue4=&quot; + Account__r.Partner_Account__r.Name + &quot;+-+&quot; + Account__r.Name &amp; &quot;+-+Lien+Waiver+Doc&quot; +
&quot;&amp;ESCustomField5=echosign_dev1__More_Recipients__c&quot; +
&quot;&amp;ESCustomFieldValue5=&quot; + Oracle_Vendor_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Solution URL1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Solution_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://workflow.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot; &amp; $Api.Session_ID &amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80  &amp; &quot;&amp;id=&quot; + Id + &quot;&amp;TemplateID=a2OQ00000005MbR&quot; + &quot;&amp;DefaultPDF=True&quot; + &quot;&amp;QMode=3&quot; + &quot;&amp;EmailToId=003Q000000U1gBF&quot; + &quot;&amp;EmailAdditionalTo={Quote.Oracle_Vendor_email_field_value__c }&quot; +  &quot;&amp;EmailCC=amit.saha@birlasoft.com &quot; + &quot;&amp;EmailTemplateId=00X60000000vrZ4&quot; + &quot;&amp;EmailSubject=Lease + Acknowledgement +Letter &quot;,&apos;&apos;, &apos;&apos;)</formula>
        <label>Conga Solution URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_XLS_Template__c</fullName>
        <description>Case #543300 , requested by Tim Chen.This field is created to capture the Record ID of Conga XLS Template to use when we click View Proposal button on Quote wizard page on Portal.</description>
        <label>Conga XLS Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Lease_Number_Dup__c</fullName>
        <externalId>true</externalId>
        <label>Consolidated Lease Number (Dup)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Lease_Number__c</fullName>
        <formula>IF( ISBLANK(Original_Lease_Number__c) , Final_Lease_Number__c , Original_Lease_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Number1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>Construction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contacts_Names__c</fullName>
        <label>Contacts Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Pricing_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Pricing Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV+BOS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractors_License__c</fullName>
        <formula>IF($User.Quote_Creation_Allowed__c,

IF(Account__r.Business_Registration__c!=null,
IF(Account__r.Business_Registration__r.Is_License_Valid__c,&apos;Y&apos;,&apos;N&apos;),

IF(DATEVALUE(Account__r.CreatedDate) &gt;= $Setup.Multi_State_Settings__c.Go_Live_Date__c,
&apos;N&apos;,
&apos;Y&apos;)),



&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractors License #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution_Margin__c</fullName>
        <label>Contribution Margin</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contribution_Margin_perc__c</fullName>
        <label>Contribution Margin %</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Copy_SM_After_Lock__c</fullName>
        <description>We have created this temporary field to know which picklist was select for System_model__c  in Quote AFTER LOCK. Currently we found in some of the quotes the System_Model__c value were missing</description>
        <label>Copy SM After Lock</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_SM_Before_Lock__c</fullName>
        <label>Copy SM Before Lock</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_quote__c</fullName>
        <description>Project: GPP
Description: Copy Link to Create a Copy of Quote.</description>
        <formula>HYPERLINK(&quot;/apex/GPPQuoteCopyEdit?Id=&quot;+ Id +&quot;&amp;acc=&quot;+ Account__r.Id +&quot;&amp;act=c&quot;, &quot;Copy&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Create a Copy of Quote.</inlineHelpText>
        <label>Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Completed__c</fullName>
        <inlineHelpText>Define the date the Cost Estimate is either a) tracking to completion or b) was completed</inlineHelpText>
        <label>Cost Estimate Tracking/Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Date_Requested__c</fullName>
        <inlineHelpText>Define the date the Cost Estimate is due based on the last agreed upon date</inlineHelpText>
        <label>Cost Estimate Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Days_Past_Due__c</fullName>
        <formula>Cost_Estimate_Completed__c - Cost_Estimate_Date_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Estimate Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Estimate Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Methodology__c</fullName>
        <label>Cost Methodology</label>
        <picklist>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cost Estimate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_of_Financing__c</fullName>
        <description>Points paid by contractor to lendor. Field created for Sunpower Loan project</description>
        <label>Cost of Financing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Financing_formula__c</fullName>
        <description>Field created to show cost of financing as a currency in the Booking template. Field type can&apos;t be changed for now , later field type would be changes and this field can be removed..</description>
        <formula>Cost_of_Financing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Financing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costomatic_Firm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requires full exclusions &amp; clarifications</inlineHelpText>
        <label>Sales Cost Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costs_Output_Comments__c</fullName>
        <label>Costs/Output Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Domain__c</fullName>
        <formula>Text($User.Country_Domain__c)</formula>
        <label>Country Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Amendment_Doc__c</fullName>
        <formula>IF( AND(Is_Locked__c = TRUE, Lease_Doc_Signed__c = TRUE) , HYPERLINK(&quot;https://composer.congamerge.com?sessionId=&quot;&amp;$Api.Session_ID&amp;&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_290&amp;&quot;&amp;ReportId= [SystemProd]00O80000005dse0&quot;&amp;&quot;&amp;id=&quot;&amp;Id&amp;&quot;&amp;QueryId=a2U80000000TN98&amp;TemplateId=&quot;&amp;IF( AmmendmentType_AmdQuote__c = &apos;Product&apos;, IF( ((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;) &amp;&amp; (Temp_Contact_2__c &lt;&gt; NULL || Temp_Contact_2__c &lt;&gt; &apos;&apos;)), &quot;a2N80000000PB2m&quot;, IF( ((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;) &amp;&amp; (Temp_Contact_2__c = NULL || Temp_Contact_2__c = &apos;&apos;)), &quot;a2N80000000PB2h&quot;, &apos;&apos;) ), IF( AmmendmentType_AmdQuote__c = &apos;Lessee&apos;, IF( ((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;) &amp;&amp; (Temp_Contact_2__c &lt;&gt; NULL || Temp_Contact_2__c &lt;&gt; &apos;&apos;)), &quot;a2N80000000PB2w&quot;, IF( ((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;) &amp;&amp; (Temp_Contact_2__c = NULL || Temp_Contact_2__c = &apos;&apos;)), &quot;a2N80000000PB2r&quot;, &apos;&apos;) ), IF( AmmendmentType_AmdQuote__c = &apos;Production&apos;, IF( ((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;) &amp;&amp; (Temp_Contact_2__c &lt;&gt; NULL || Temp_Contact_2__c &lt;&gt; &apos;&apos;)), &quot;a2N80000000PB36&quot;, IF( ((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;) &amp;&amp; (Temp_Contact_2__c = NULL || Temp_Contact_2__c = &apos;&apos;)), &quot;a2N80000000PB31&quot;, &apos;&apos;) ), &apos;&apos; ) ) )&amp;&quot;&amp;DS7=4&amp;ESSignaturetype=2&amp;ESCustomField1=Quote__c&amp;ESCustomFieldValue1=&quot;&amp;Id&amp;&quot;&amp;ESCustomField2=Account__c&amp;ESCustomFieldValue2=&quot;&amp;Related_Account__c&amp;&quot;&amp;ESCustomField3=OwnerId&amp;ESCustomFieldValue3=&quot;&amp;Account__r.OwnerId&amp;&quot;&amp;ESCustomField4=Created_By_Partner_Poratl_User__c&amp;ESCustomFieldValue4=Y&quot;&amp;&quot;&amp;ESCustomField5=Agreement_Name__c&amp;ESCustomFieldValue5=&quot;&amp;Account__r.Partner_Account__r.Account_Name__c&amp;&quot;-&quot;&amp;Account__r.Account_Name__c&amp;&quot;- Amendment&quot;&amp;&quot;&amp;DS7Preview=1&amp;FP0=1&amp;OFN=&quot;&amp;Account__r.Partner_Account__r.Account_Name__c&amp;&quot;-&quot;&amp;Account__r.Account_Name__c&amp;&quot;- Amendment&quot;&amp;&quot;-&quot;&amp;Final_Lease_Number__c&amp;&quot;&amp;DefaultPDF=1&amp;AttachmentParentId=&quot;&amp;Account__r.Id&amp;&quot;&amp;ESAgreementName=&quot;&amp;Account__r.Partner_Account__r.Account_Name__c&amp;&quot;-&quot;&amp;Account__r.Account_Name__c&amp;&quot;- Amendment&quot;,image(&quot;/servlet/servlet.FileDownload?file=01580000001Mehl&quot;,&quot;_blank&quot;) ), &apos;&apos;)</formula>
        <label>Create Amendment Doc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_LOI__c</fullName>
        <formula>IF( AND(Is_Locked__c,Code_Expiration_Date__c &gt;= TODAY()), HYPERLINK(&quot;https://www.appextremes.com/apps/Conga/PointMerge.aspx?sessionId=&quot; &amp; $Api.Session_ID &amp;
&quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80 &amp;
&quot;&amp;id=&quot; &amp; Id &amp; &quot;&amp;fp0=1&quot; &amp; &quot;&amp;TemplateId=a2Nn0000000HOVA&quot; &amp;
&quot;&amp;DS7=14 &amp;ESVisible=0 &amp;ESSignaturetype=1 &amp;ESCustomField1=Quote__c &amp;ESCustomFieldValue1=&quot; &amp; Id &amp;
&quot;&amp;DefaultPDF=1 &amp;AttachmentParentId=&quot; &amp; Account__r.Id &amp;
&quot;&amp;ESAgreementName=&quot; &amp; $User.Acc_Name_Enc__c &amp; &quot;-&quot; &amp; Account__r.Account_Name__c &amp; &quot;-Lease Document&quot;,
IMAGE(&quot;https://c.cs30.content.force.com/servlet/servlet.FileDownload?file=015n00000008vAU&quot;, &quot;No&quot;)),&quot;Quote must be locked and w/in the Expiration Date.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create LOI</label>
        <type>Text</type>
    </fields>
</CustomObject>